[gd_scene load_steps=12 format=2]

[ext_resource path="res://Camera2D.gd" type="Script" id=1]
[ext_resource path="res://peon.tscn" type="PackedScene" id=2]
[ext_resource path="res://map.gd" type="Script" id=3]
[ext_resource path="res://Ground037_1K_Color.png" type="Texture" id=4]
[ext_resource path="res://building.tscn" type="PackedScene" id=5]
[ext_resource path="res://art assets/k'inh human male villager spritesheet.png" type="Texture" id=6]
[ext_resource path="res://name.gd" type="Script" id=7]
[ext_resource path="res://Button.gd" type="Script" id=8]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 49.3456, 4.87048 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 90.1218, 598.747 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 214.883, 74.9835, 106.319, 92.1428 )

[node name="map" type="Node2D"]
script = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
script = ExtResource( 1 )

[node name="ScrollUpArea" type="Area2D" parent="Camera2D"]
collision_layer = 512
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera2D/ScrollUpArea"]
position = Vector2( 2, -534.493 )
scale = Vector2( 18.5129, 16.9203 )
shape = SubResource( 4 )

[node name="ScrollDownArea" type="Area2D" parent="Camera2D"]
position = Vector2( -3.36365, 1052.8 )
collision_layer = 512
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera2D/ScrollDownArea"]
position = Vector2( 2, -534.493 )
scale = Vector2( 18.5129, 16.9203 )
shape = SubResource( 4 )

[node name="ScrollLeftArea" type="Area2D" parent="Camera2D"]
collision_layer = 512
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera2D/ScrollLeftArea"]
position = Vector2( -841.214, 0 )
shape = SubResource( 3 )

[node name="ScrollRightArea" type="Area2D" parent="Camera2D"]
collision_layer = 512
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera2D/ScrollRightArea"]
position = Vector2( 836.361, -3.62213 )
shape = SubResource( 3 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 3072, 3072 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
scale = Vector2( 3, 3 )
texture = ExtResource( 4 )

[node name="YSort" type="YSort" parent="."]

[node name="building" parent="YSort" instance=ExtResource( 5 )]
position = Vector2( -146.344, -57.2238 )

[node name="unit" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 79.5572, 92.3416 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchor_left = 0.0513909
anchor_top = 0.724949
anchor_right = 1.05139
anchor_bottom = 0.844949
margin_top = -20.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PanelContainer2" type="PanelContainer" parent="CanvasLayer/HBoxContainer"]
margin_right = 446.0
margin_bottom = 146.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/HBoxContainer/PanelContainer2"]
margin_left = 7.0
margin_top = 7.0
margin_right = 439.0
margin_bottom = 139.0

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/HBoxContainer/PanelContainer2/HBoxContainer"]
margin_right = 106.0
margin_bottom = 132.0
texture = SubResource( 5 )

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/HBoxContainer/PanelContainer2/HBoxContainer"]
margin_left = 110.0
margin_right = 432.0
margin_bottom = 132.0
rect_min_size = Vector2( 0, 60 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/HBoxContainer/PanelContainer2/HBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 315.0
margin_bottom = 125.0

[node name="NameDisplay" type="Label" parent="CanvasLayer/HBoxContainer/PanelContainer2/HBoxContainer/PanelContainer/VBoxContainer"]
margin_right = 308.0
margin_bottom = 14.0
text = "Unit"
script = ExtResource( 7 )

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/HBoxContainer/PanelContainer2/HBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 308.0
margin_bottom = 118.0

[node name="Button" type="Button" parent="CanvasLayer/HBoxContainer/PanelContainer2/HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
text = "A"
script = ExtResource( 8 )

[node name="Button2" type="Button" parent="CanvasLayer/HBoxContainer/PanelContainer2/HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 104.0
margin_right = 204.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
text = "B"
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}
button_id = 1

[node name="Button3" type="Button" parent="CanvasLayer/HBoxContainer/PanelContainer2/HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 208.0
margin_right = 308.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
text = "C"
script = ExtResource( 8 )
button_id = 2

[connection signal="register" from="CanvasLayer/HBoxContainer/PanelContainer2/HBoxContainer/PanelContainer/VBoxContainer/NameDisplay" to="." method="_on_NameDisplay_register"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/PanelContainer2/HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_pressed" binds= [ 0 ]]
[connection signal="register" from="CanvasLayer/HBoxContainer/PanelContainer2/HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_register"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/PanelContainer2/HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/Button2" to="." method="_on_Button_pressed" binds= [ 1 ]]
[connection signal="register" from="CanvasLayer/HBoxContainer/PanelContainer2/HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/Button2" to="." method="_on_Button_register"]
[connection signal="register" from="CanvasLayer/HBoxContainer/PanelContainer2/HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/Button3" to="." method="_on_Button_register"]
